# Minesweeper-C-Qt

./: CMakeLists.txt  aboutprogram.cpp  aboutprogram.hpp  aboutprogram.ui  attemptsplacementstrategy.cpp  attemptsplacementstrategy.hpp  cell.cpp  cell.hpp  clusteredplacement.cpp  clusteredplacement.hpp  customdifficultywindow.cpp  customdifficultywindow.hpp  customdifficultywindow.ui  difficulty.cpp  difficulty.hpp  game.cpp  game.hpp  gamefield.cpp  gamefield.hpp  gametimer.cpp  gamewindow.cpp  gamewindow.hpp  gamewindow.ui  howtoplay.cpp  howtoplay.hpp  howtoplay.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mineplacementfactory.cpp  mineplacementfactory.hpp  mineplacementstrategy.hpp  nosafeplacement.cpp  nosafeplacement.hpp  point.cpp  point.hpp  randommineplacement.cpp  randommineplacement.hpp  resources.qrc  (+15 more)
translations/: minesweeper_en.ts  minesweeper_ru.ts
